syntax = "proto3";
option java_multiple_files = true;
package com.github.saiprasadkrishnamurthy.ruler.rpc;

import "google/protobuf/any.proto";

message RuleExecutionRequest {
    string transactionId = 1;
    map<string,google.protobuf.Any> metadata = 2;
    map<string,google.protobuf.Any> selectionAttributes = 3;
    google.protobuf.Any payload = 4;
    enum RuleModeType {
        Live = 0;
        Preview = 1;
      }
    RuleModeType ruleModeType = 5;
}

message RuleExecutionResponse {
    string transactionId = 1;
    map<string, string> ruleNameContentMapping = 2;
}

service RuleExecutionService {
    rpc execute(RuleExecutionRequest) returns (RuleExecutionResponse);
}